--- a/css/wap/wechat.css
+++ b/css/wap/wechat.css
@@ -13,8 +13,8 @@ a:link; a:visited; a:hover; a:active{
     font-weight: normal;  
 } 
 *{
-		-webkit-user-select: none;
-		user-select: none;
+		/*-webkit-user-select: none;
+		user-select: none;*/
 }
 footer{
 	position: fixed;
@@ -39,7 +39,7 @@ li:hover{
 
 
 .tips{
-	background: #f4d8f0;
+	background: #f1c6eb;
 	margin: 1% 1%;
 	margin-top: 10px;
 	-webkit-box-shadow: 0 0px 3px rgba(0,0,0,0.2);
@@ -47,15 +47,15 @@ li:hover{
 }
 	.tips header{
 		border: 1px solid #e5badf;
-		padding: 8px 15px;
+		padding: 8px 10px;
 		}
 		.tips h4, .tips-content p{
 			color: #95067f;
 			margin: 0;
 		}
 	.tips-content{
-		padding: 8px 15px;
-		background: #f9f9f9;
+		padding: 8px 10px;
+		background: #f4d8f0;
 	}
 	#tips-announcement{
 		font-size: 14px;
@@ -70,7 +70,7 @@ li:hover{
 	position: relative;
 	margin: 0;
 	padding: 0;
-	background: #f1c6eb; 
+	background: #f4d8f0; 
 }
 .btn-icon:active{
 	background: #fbe6f8;
@@ -164,8 +164,7 @@ li:hover{
 		position: relative;
 	}
 	.ul-sort-recommend h4,.ul-sort-recommend p{
-		padding-left: 15px;
-		padding-right: 15px;
+		padding:0 10px;
 		height: 25px;
 		width: auto;
 		left: 0;
@@ -201,7 +200,7 @@ li:hover{
 
 	.sort-item-nor{
 		padding: 10px 10px;
-		padding-left: 95px;
+		padding-left: 90px;
 		width: 100%;
 		position: absolute;
 		border-width: 0;
@@ -233,7 +232,7 @@ li:hover{
 		border-width: 0;
 		white-space: nowrap;
 		overflow: hidden;
-		margin-right: 110px;
+		margin-right: 100px;
 
 	}
 	.ul-sort-normal h4,.ul-sort-normal p{
@@ -302,7 +301,7 @@ li:hover{
 		text-align: left;
 		margin: 0;
 		width: auto;
-		margin-left: 15px;
+		margin-left: 10px;
 		position: relative;
 		text-overflow: ellipsis;
 		-webkit-background-clip: padding;
@@ -319,26 +318,58 @@ li:hover{
 		margin-top: 3px;
 	}
 	.ul-product .p-aside2{
-		width: auto;
-		padding: 2px 2px;
+		max-width: 85px;
+		padding: 1px 5px;
 		margin: 0;
-		height: auto;
+		height: 15px;
 		float: center;
 		position: absolute;
 		top: 0;
-		left: 0;
 		bottom: auto;
 		/* Custom styling. */
 		color: #ffffff;
-		background: rgba(0,0,0,.6);
+		background: #95067f;
+		box-shadow: 1px 0.5px 3px rgba(0,0,0,0.75);
 		border: 0;
+	}
+
+
+	#order-first-item{
+		margin-top: 10px;
+		min-height: 55px;
+		height: 55px;
+		background: #f1c6eb;
+		border-top-width: 1px;
+	}
+
+	#order-first-item>p{
+		color:#cb6bbc;
+	}
+
+
+	#havelook-btn,#clear-btn{
+		height: 40px;
+		width: auto;
+		position: absolute;
+		top:7.5px;
+		right: 10px;
+		border:1px solid #e5badf;	
+		box-shadow: 0 0 1px rgba(0,0,0,0.2);
+	}
+
+	#havelook-btn>.text-in-btn,#clear-btn>.text-in-btn{
+		margin-top: 0px;
+	}
+
+	#havelook-btn>.img-in-btn,#clear-btn>.img-in-btn{
+	top: 13px;
 	}
 
 
 
 	.button-group-inlist{
 		position: absolute;
-		right:15px;
+		right:10px;
 		height: 40px;
 		top:15px;
 	}
@@ -356,12 +387,13 @@ li:hover{
 	}
 	.button-single-inlist{
 		position: absolute;
-		right:15px;
+		right:10px;
 		height: 40px;
 		top:15px;
+		text-align:center;
 		background: #f4d8f0;
-		border:1px solid #e5badf;	
-		box-shadow: 0.5px 0 1px rgba(0,0,0,0.2);
+		border:none;	
+		box-shadow: none;
 	}
 	.button-single-inlist>.text-in-btn{
 		font-size: 14px;
@@ -369,6 +401,9 @@ li:hover{
 		margin-right: 10px;
 		font-weight: 700;
 		color: #95067f;
+	}
+	.button-single-inlist:active{
+		background: #f4d8f0;
 	}
 
 
@@ -434,6 +469,103 @@ li:hover{
 }
 
 
+#personalinfo{
+	background: #f1c6eb;
+	text-shadow: 0 0 0 #ffffff;
+	margin: 1% 1%;
+	margin-top: 10px;
+	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+	box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+}
+#personalinfo>header{
+	border: 1px solid #e5badf;
+	padding: 8px 10px;
+	}
+	#personalinfo>header>h4{
+		margin: 0;
+		color: #95067f;
+	}
+
+#personalinfo-content{
+	padding: 10px 10px;
+	background: #f4d8f0;
+	display: block;
+}
+
+#personalinfo-content label{
+	font-size: 13px;
+	color: #95067f;
+	margin-bottom: 3px;
+}
+#personalinfo-content input{
+	width: 100%;
+	height: 30px;
+	font-size: 16px;
+	margin-bottom: 10px;
+	border:1px solid #e5badf;
+}
+#personalinfo-content select{
+	width: 100%;
+	height: 40px;
+	margin-bottom: 10px;
+	font-size: 16px;
+	border:1px solid #e5badf;
+	cursor: pointer;
+	-webkit-appearance: none;
+	left: 0;
+	top: 0;
+	min-height: 100%;
+	max-height: 100%;
+}
+#personalinfo-content textarea{
+	width: 100%;
+	rows:3;
+	height: 60px;
+	max-height: 60px;
+	font-size: 16px;
+	margin-bottom: 10px;
+	border:1px solid #e5badf;
+}
+.select-area-desc{
+	margin-top: 3px;
+	width: 100%;
+	font-size: 13px;
+	color: #95067f;
+	margin-bottom: 10px;
+
+}
 
 
+#submit-btn{
+	width: 98%;
+	margin: 1%;
+	display: block;
+	height: 50px;
+	margin-top: 10px;
+	border:1px solid #e5badf;	
+	box-shadow: -0.5px 0 1px rgba(0,0,0,0.2);
+}
 
+#submit-btn>img {
+	height: 14px;
+	left:50%;
+	margin-left:30px;
+	top: 18px;
+}
+
+.toast{
+	background:rgba(0,0,0,0.5);
+	width: auto;
+	padding: 0 5px;
+	left:-150px;
+	min-width:100px;
+	height:40px;
+	color:#fff;
+	line-height:40px;
+	text-align:center;
+	position:fixed;
+	float: center;
+	top:30px;  
+	z-index:999999; 
+	font-weight:bold; 
+}
