--- a/css/order-flow.css
+++ b/css/order-flow.css
@@ -71,6 +71,7 @@
 
 		.order-footer ul li div:hover{
 			color: black;
+            cursor: pointer;
 			background-color:#e9e9e9;
 			background-image:-moz-linear-gradient(top, #fff, #c8c8c8);
 			background-image:-ms-linear-gradient(top, #fff, #c8c8c8);
@@ -86,6 +87,9 @@
         }
 
         .order-footer .order-date-container{
+            display: none;
+        }
+        .order-footer .order-area-container {
             display: none;
         }
 
@@ -135,6 +139,71 @@
     	.order-footer label i{
     		font-weight: bold;
     	}
+
+        /*
+            pop up style
+        */
+        .order-footer #popup{
+            position: absolute;
+            height: 200px;
+            overflow: auto;
+            overflow-x: hidden !important;
+            overflow-y: auto !important; 
+            bottom: 40px;
+            left:21px;
+            min-width: 140px;
+            padding: 5px 0;
+            margin: 2px 0 0;
+            list-style: none;
+            background-color: #ffffff;
+            border: 1px solid #ccc;
+            border: 1px solid rgba(0, 0, 0, 0.2);
+            -webkit-border-radius: 6px;
+            -moz-border-radius: 6px;
+            border-radius: 6px;
+            -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+            -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+            -webkit-background-clip: padding-box;
+            -moz-background-clip: padding;
+            background-clip: padding-box;
+        }
+
+        .order-footer #popup:before{
+            position:absolute;
+            bottom: -6px;
+            left: 9px;
+            display: inline-block;
+            border-right: 7px solid transparent;
+            border-top: 7px solid white;
+            border-left: 7px solid transparent;
+            border-bottom-color: rgba(0, 0, 0, 0.2);
+            content: '';
+        }
+        .order-footer #popup li a{
+            padding:2px 20px;
+            height: 100%;
+            width: 100%;
+            font-weight: normal;
+            line-height: 30px;
+            color: #333333;
+            white-space: nowrap;
+        }
+
+        .order-footer #popup li{
+            float: none;
+            height: 30px;
+        }
+
+        .order-footer #popup li:hover{
+            background-color: #0088cc;
+            cursor: pointer;
+        }   
+
+        .order-footer  #popup li a:hover{
+            color:white;
+        }  
+
     	.order-body {
     		width: 100%;
     		height: 100%;
