--- a/css/order-flow.css
+++ b/css/order-flow.css
@@ -92,6 +92,12 @@
         .order-footer .order-area-container {
             display: none;
         }
+        .order-footer .isBatOperate {
+            display: none;
+        }
+        .order-footer .batOrderCache {
+            display: none;
+        }
 
 		.order-footer .footer-btn {
 			width: 60px;
@@ -102,7 +108,7 @@
     		width: 60px;
     		padding-top: 30%
     	}
-    	.order-footer .footer-right-btn { 
+    	.order-footer .footer-right-btn {
     		border-left: 1px solid #c8c8c8;
     		width: 60px;
     		padding-top: 30%
@@ -202,7 +208,68 @@
 
         .order-footer  #popup li a:hover{
             color:white;
-        }  
+        }
+
+        /*
+            batOperate up style
+        */
+        .order-footer #batOperate{
+            position: absolute;
+            height: 100px;
+            bottom: 50px;
+            left:521px;
+            min-width: 110px;
+            padding: 5px 0;
+            margin: 2px 0 0;
+            list-style: none;
+            background-color: #ffffff;
+            border: 1px solid #ccc;
+            border: 1px solid rgba(0, 0, 0, 0.2);
+            -webkit-border-radius: 6px;
+            -moz-border-radius: 6px;
+            border-radius: 6px;
+            -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+            -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+            -webkit-background-clip: padding-box;
+            -moz-background-clip: padding;
+            background-clip: padding-box;
+        }
+
+        .order-footer #batOperate:before{
+            position:absolute;
+            bottom: -6px;
+            left: 9px;
+            display: inline-block;
+            border-right: 7px solid transparent;
+            border-top: 7px solid white;
+            border-left: 7px solid transparent;
+            border-bottom-color: rgba(0, 0, 0, 0.2);
+            content: '';
+        }
+        .order-footer #batOperate li a{
+            padding:2px 20px;
+            height: 100%;
+            width: 100%;
+            font-weight: normal;
+            line-height: 30px;
+            color: #333333;
+            white-space: nowrap;
+        }
+
+        .order-footer #batOperate li{
+            float: none;
+            height: 30px;
+        }
+
+        .order-footer #batOperate li:hover{
+            background-color: #0088cc;
+            cursor: pointer;
+        }   
+
+        .order-footer  #batOperate li a:hover{
+            color:white;
+        }
 
     	.order-body {
     		width: 100%;
@@ -232,23 +299,46 @@
     	.order-body ul>li .order-item ul>li {
     		float: left;
     	}
-    	/**订单状态**/
-    	.order-body ul>li .item-wait ul>li.order-state {
-    		width: 6%;
-    		height: 100%;
-    		background-color: #f0f9fe;
-            border-bottom: 1px solid #c8c8c8;
-    	}
         .order-body ul>li .order-item .state {
             height: 100%;
             border-right: 1px solid #c8c8c8;
         }
+        /**订单状态**/
+        /*待派送*/
+        .order-body ul>li .item-wait ul>li.order-state {
+            width: 6%;
+            height: 100%;
+            background-color: #f0f9fe;
+            border-bottom: 1px solid #c8c8c8;
+        }
+        /*待生产*/
     	.order-body ul>li .item-produce ul>li.order-state {
     		width: 6%;
     		height: 100%;
     		background-color: #f8c0c0;
             border-bottom: 1px solid #ffc8c8;
     	}
+         /*派送中*/
+        .order-body ul>li .item-sending ul>li.order-state {
+            width: 6%;
+            height: 100%;
+            background-color: #f0f9fe;
+            border-bottom: 1px solid #ffc8c8;
+        }
+         /*已完成*/
+        .order-body ul>li .item-finish ul>li.order-state {
+            width: 6%;
+            height: 100%;
+            background-color: #f8c0c0;
+            border-bottom: 1px solid #ffc8c8;
+        }
+         /*已取消*/
+        .order-body ul>li .item-cancel ul>li.order-state {
+            width: 6%;
+            height: 100%;
+            background-color: #f8c0c0;
+            border-bottom: 1px solid #ffc8c8;
+        }
     	.order-body ul>li .order-item .order-state label{
     		width: 20px;
     		padding: 10px;
@@ -477,6 +567,74 @@
         #choosePosterModal .modal-body label .required{
             display: none;
         }
+
+        /*修改订单头*/
+        #modifyOrderHeaderModal {
+            width: 300px;
+            margin-left: -180px;
+
+        }
+        #modifyOrderHeaderModal .modal-body{
+            width: 100%;
+            margin: 0;
+            padding: 0;
+            height: 211px;
+        }
+        #modifyOrderHeaderModal .modal-body .well{
+            width: 270px;
+            height: 170px;
+            margin: 10px;
+            padding: 5px;
+        }
+        #modifyOrderHeaderModal .modal-body label{
+            display: inline-block;
+            min-width: 50px;
+            line-height: 30px;
+            margin: 5px;
+        }
+         #modifyOrderHeaderModal .modal-body input{
+            float: right;
+            right: 10px;
+            margin: 5px;
+            display: inline-block;
+        }
+        #modifyOrderHeaderModal .modal-body label .required{
+            display: none;
+        }
+        /*增加订单子项*/
+        #orderAddItemModal {
+            width: 300px;
+            margin-left: -180px;
+
+        }
+        #orderAddItemModal .modal-body{
+            width: 100%;
+            margin: 0;
+            padding: 0;
+            height: 211px;
+        }
+        #orderAddItemModal .modal-body .well{
+            width: 270px;
+            height: 170px;
+            margin: 10px;
+            padding: 5px;
+        }
+        #orderAddItemModal .modal-body label{
+            display: inline-block;
+            min-width: 50px;
+            line-height: 30px;
+            margin: 5px;
+        }
+         #orderAddItemModal .modal-body input{
+            float: right;
+            right: 10px;
+            margin: 5px;
+            display: inline-block;
+        }
+        #orderAddItemModal .modal-body label .required{
+            display: none;
+        }
+
 
 
         /*event-editor*/
