--- a/css/product.css
+++ b/css/product.css
@@ -5,6 +5,10 @@
     bottom: 0;
     left:200px;
     width:410px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
     -moz-box-shadow: 0 0 5px rgba(0,0,0,0.15);
     -webkit-box-shadow: 0 0 5px rgba(0,0,0,0.15);
     box-shadow: 0 1px 3px rgba(0,0,0,0.5);
@@ -81,7 +85,7 @@
 
   #product-list{
     margin-bottom: 20px;
-    max-height:430px;
+    max-height: 70%;
     overflow: scroll;
     overflow-x: hidden !important;
     overflow-y: auto !important;
@@ -93,15 +97,25 @@
     border-bottom: 1px solid #d3d3d3;
   }
 
+  #product-list li.active{
+    background-color:#ecf2f5;
+    background-image:-moz-linear-gradient(top, #f4fafd, #e0e5e8);
+    background-image:-ms-linear-gradient(top, #f4fafd, #e0e5e8);
+    background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#f4fafd), to(#e0e5e8));
+    background-image:-webkit-linear-gradient(top, #f4fafd, #e0e5e8);
+    background-image:-o-linear-gradient(top, #f4fafd, #e0e5e8);
+    background-image:linear-gradient(top, #f4fafd, #e0e5e8);
+  }
+
   #product-list li:hover{
     cursor: pointer;
-      background-color:#ecf2f5;
-  background-image:-moz-linear-gradient(top, #f4fafd, #e0e5e8);
-  background-image:-ms-linear-gradient(top, #f4fafd, #e0e5e8);
-  background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#f4fafd), to(#e0e5e8));
-  background-image:-webkit-linear-gradient(top, #f4fafd, #e0e5e8);
-  background-image:-o-linear-gradient(top, #f4fafd, #e0e5e8);
-  background-image:linear-gradient(top, #f4fafd, #e0e5e8);
+    background-color:#ecf2f5;
+    background-image:-moz-linear-gradient(top, #f4fafd, #e0e5e8);
+    background-image:-ms-linear-gradient(top, #f4fafd, #e0e5e8);
+    background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#f4fafd), to(#e0e5e8));
+    background-image:-webkit-linear-gradient(top, #f4fafd, #e0e5e8);
+    background-image:-o-linear-gradient(top, #f4fafd, #e0e5e8);
+    background-image:linear-gradient(top, #f4fafd, #e0e5e8);
   }
 
 
@@ -115,9 +129,11 @@
   }
 
   #product-list .seal{
-    margin-left: 45px;
+    margin-left: 40px;
   }
-
+  #product-list .grey-seal{
+    margin-left: 40px;
+  }
   .shift{
     padding-top: 5px;
   }
@@ -203,11 +219,77 @@
     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#c8c8c8', GradientType=0)
   }
 
-    /*第三块区域*/
-  .main .task-detail{
+  #popup{
+    position: absolute;
+    bottom: 40px;
+    left:61px;    
+    min-width: 160px;
+    padding: 5px 0;
+    margin: 2px 0 0;
+    list-style: none;
+    background-color: #ffffff;
+    border: 1px solid #ccc;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+    -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    -webkit-background-clip: padding-box;
+    -moz-background-clip: padding;
+    background-clip: padding-box;
+  }
+
+  #popup:before{
+    position: absolute;
+    bottom: -6px;
+    left: 9px;
+    display: inline-block;
+    border-right: 7px solid transparent;
+    border-top: 7px solid white;
+    border-left: 7px solid transparent;
+    border-bottom-color: rgba(0, 0, 0, 0.2);
+    content: '';
+  }
+
+  #popup li a{
+    padding:2px 20px;
+    font-weight: normal;
+    line-height: 20px;
+    color: #333333;
+    white-space: nowrap;
+  }
+
+  #popup li:hover{
+    background-color: #0088cc
+  }   
+
+  #popup li a:hover{
+    color:white;
+  }  
+
+  .modal-group{
+    margin-bottom: 8px;
+  }
+
+  .modal-group .title-label{
+    float: left;
+    width: 90px;
+    text-align: right;
+    padding-top: 5px;
+  }
+
+  .modal-group .content-label{
+    margin-left: 110px;
+  }
+
+
+  #change-area{
     position: absolute;
     top: 41px;
     left:610px;
+
     right: 0;
     bottom:0;
     background-color: #ffffff;
@@ -218,6 +300,13 @@
     -moz-box-shadow: 0 0 5px rgba(0,0,0,0.15);
     -webkit-box-shadow: 0 0 5px rgba(0,0,0,0.15);
     box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+
+  }
+
+    /*第三块区域*/
+  .main .task-detail{
+    max-width: 560px;
+    min-width: 555px;
   }
 
   .task-detail .prod{
@@ -245,8 +334,44 @@
     margin-left: 300px;
   }
 
-  .cover-desc{
-    margin-top: -10px;
+  .batch .type-img-desc{
+    position: relative;
+    overflow: hidden;
+    margin-right: 4px;
+    display: inline-block;
+    padding: 4px 10px 4px;
+    font-size: 14px;
+    line-height: 18px;
+    color: #fff;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    background-color: #5bb75b;
+    border: 1px solid #cccccc;
+    border-color: #e6e6e6 #e6e6e6 #bfbfbf;
+    border-bottom-color: #b3b3b3;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+  }
+
+  .batch .type-img-desc form{
+    margin-bottom: 0;
+  }
+
+  .batch .type-img-desc input{
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    border: solid transparent;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    cursor: pointer;
+  }
+
+  .prod .cover-desc{
+    margin-top: -13px;
     margin-left: 50px;
     position: relative;
     overflow: hidden;
@@ -287,11 +412,6 @@
     margin-left: 25px;
   }
 
-  .progress { position:relative; margin-left:100px; margin-top:-24px; width:200px;padding: 1px; border-radius:3px; display:none}
-  .bar {background-color: green; display:block; width:0%; height:20px; border-radius: 3px; }
-  .percent { position:absolute; height:20px; display:inline-block; top:3px; left:2%; color:#fff }
-
-
   .info-group{
     margin-bottom: 8px;
   }
@@ -320,12 +440,43 @@
     margin-left: 13px;
   }
 
-  .info-button{
-    margin-top: 10px;
-    margin-left: 20px;
+  #change-area .batch-menu ul li{
+    float: left;
+    border-right: 1px solid #9E9898;
   }
 
-  .info-button a{
-    float: right;
+  #change-area .batch-menu ul li a{
+    color: rgb(65, 60, 60);
+    font-size: 14px;
+    height: 25px;
+    padding: 10px 8px 0 8px;
+    display: block;
+    text-align: center;
+    border-right: 1px solid #c8c8c8;
+    background-color: #e7e7e7;
+    background-image: -moz-linear-gradient(top, #f7f7f7, #cfcfcf);
+    background-image: -ms-linear-gradient(top, #f7f7f7, #cfcfcf);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f7f7f7), to(#cfcfcf));
+    background-image: -webkit-linear-gradient(top, #f7f7f7, #cfcfcf);
+    background-image: -o-linear-gradient(top, #f7f7f7, #cfcfcf);
+    background-image: linear-gradient(top, #f7f7f7, #cfcfcf);
+    background-repeat: repeat-x;
+  }
+
+  #change-area .batch-menu ul li a:hover{
+    color: black;
+    background-color:#e9e9e9;
+    background-image:-moz-linear-gradient(top, #fff, #c8c8c8);
+    background-image:-ms-linear-gradient(top, #fff, #c8c8c8);
+    background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#fff), to(#c8c8c8));
+    background-image:-webkit-linear-gradient(top, #fff, #c8c8c8);
+    background-image:-o-linear-gradient(top, #fff, #c8c8c8);
+    background-image:linear-gradient(top, #fff, #c8c8c8);
+    background-repeat:repeat-x;
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#c8c8c8', GradientType=0)
+  }
+
+  #outdate{
+    color:rgb(65, 60, 60);
   }
   
