--- a/css/product.css
+++ b/css/product.css
@@ -370,7 +370,7 @@
     cursor: pointer;
   }
 
-  .prod .cover-desc{
+  .cover-desc{
     margin-top: -13px;
     margin-left: 50px;
     position: relative;
