--- a/css/main_v0_7.css
+++ b/css/main_v0_7.css
@@ -89,7 +89,7 @@
   .btn-tow:focus{
     -webkit-box-shadow:0 0 6px rgba(121,176,237,0.6);
     -moz-box-shadow:0 0 6px rgba(121,176,237,0.6);
-    box-shadow:1px 1px 1px rgba(0,0,0,0.1)
+    box-shadow:1px 1px 1px rgba(0,0,0,0.1);
   }
 
   .btn-tow-x{
@@ -277,6 +277,15 @@
 
 .main .sidebar .menu ul li:hover{
   background-color: #f8f8f8;
+}
+
+.main .sidebar .menuHeader{
+  background-color: #ffffff;
+  padding-left: 5px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  box-shadow: 0px 1px 2px #808080;
+  border-bottom: 1px solid #808080;
 }
 
 .main .sidebar .menuAction,
