--- a/css/rules.css
+++ b/css/rules.css
@@ -1,12 +1,17 @@
   #rule-list{
+    max-height: 90%;
+    overflow: scroll;
+    overflow-x: hidden !important;
+    overflow-y: auto !important;
+  }
+  #custom-list{
     margin-bottom: 20px;
     max-height: 90%;
     overflow: scroll;
     overflow-x: hidden !important;
     overflow-y: auto !important;
   }
-
-  #rule-list li{
+  #rule-list li,#custom-list li{
   	overflow: hidden;
     border-bottom: 1px solid #d3d3d3;
   }
@@ -15,7 +20,7 @@
     padding-left:35px;   
   }
 
-  #rule-list li.active{
+  #rule-list li.active,,#custom-list li.active{
     background-color:#ecf2f5;
     background-image:-moz-linear-gradient(top, #f4fafd, #e0e5e8);
     background-image:-ms-linear-gradient(top, #f4fafd, #e0e5e8);
@@ -25,7 +30,7 @@
     background-image:linear-gradient(top, #f4fafd, #e0e5e8);
   }
 
-  #rule-list li:hover{
+  #rule-list li:hover,#custom-list li:hover{
     cursor: pointer;
     background-color:#ecf2f5;
     background-image:-moz-linear-gradient(top, #f4fafd, #e0e5e8);
@@ -39,6 +44,12 @@
 
   #product-list li:last-child{
     border-bottom: none;
+  }
+
+  #auto-reply input[type='text'],
+  #default-reply input[type='text'],
+  #customize-reply input[type='text']{
+    width: 90%;
   }
 
   .title-change{
@@ -66,6 +77,11 @@
   	font-weight: bold;
   }
 
+  .del-item{
+    float: right;
+    margin-right: 15%;
+  }
+
   .reply-content .sp-select{
   	width: 90%;
   }
@@ -83,12 +99,12 @@
   .imagetext-add a{
   	padding-top: 7px;
   	display: block;
-	border-radius: 5px;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-	border: 3px dotted #b8b8b8;
-	height: 22px;
-	font-size: 16px;
+  	border-radius: 5px;
+  	-moz-border-radius: 5px;
+  	-webkit-border-radius: 5px;
+  	border: 3px dotted #b8b8b8;
+  	height: 22px;
+  	font-size: 16px;
   }
 
   .reply-checkbox{
