--- a/css/rules.css
+++ b/css/rules.css
@@ -1,9 +1,173 @@
+  body{
+    font-size: 14px;
+  }
+
+  ul{
+    list-style: none;
+    margin: 0;
+    padding:0;
+  }
+
+  a{
+    color: #4298ba;
+  }
+
+  a:hover,a:focus{
+    text-decoration: none;
+  }
+
+  .left{float: left}
+
+  .sp-select{
+    width: 100px;
+    height:25px;
+    line-height: 20px;
+    display: inline-block;
+  }
+
+  #rule-left{
+    position: absolute;
+    top:100px;
+    left:50%;
+    margin-left: -450px;
+    bottom:0;
+    width: 300px;
+    background-color: #ffffff;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
+
+    border: 1px solid #dbdfd6;
+  }
+
+  #rule-right{
+    position: absolute;
+    top:100px;
+    left:50%;
+    margin-left: -150px;
+    width: 600px;
+    bottom: 0;
+    background-color: #ffffff;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
+    border: 1px solid #dbdfd6;
+
+  }
+
+  .batch-menu{
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    background-color: #aaa;
+    border-top: 1px solid #ccc;
+    background-color: #e7e7e7;
+    background-image: -moz-linear-gradient(top, #f7f7f7, #cfcfcf);
+    background-image: -ms-linear-gradient(top, #f7f7f7, #cfcfcf);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f7f7f7), to(#cfcfcf));
+    background-image: -webkit-linear-gradient(top, #f7f7f7, #cfcfcf);
+    background-image: -o-linear-gradient(top, #f7f7f7, #cfcfcf);
+    background-image: linear-gradient(top, #f7f7f7, #cfcfcf);
+    background-repeat: repeat-x;
+  }
+
   #rule-list{
     max-height: 90%;
     overflow: scroll;
     overflow-x: hidden !important;
     overflow-y: auto !important;
   }
+
+  #rule-left .batch-menu ul{
+    margin: 0;
+    position: relative;
+  }
+
+  #rule-left .batch-menu ul li{
+    float: left;
+    border-right: 1px solid #9E9898;
+  }
+
+  #rule-left .batch-menu ul li:first-child{
+    padding: 10px 8px 0 8px;
+  }
+
+  #rule-left .batch-menu ul li a{
+    color: rgb(65, 60, 60);
+    font-size: 14px;
+    height: 25px;
+    padding: 10px 8px 0 8px;
+    display: block;
+    text-align: center;
+    border-right: 1px solid #c8c8c8;
+    background-color: #e7e7e7;
+    background-image: -moz-linear-gradient(top, #f7f7f7, #cfcfcf);
+    background-image: -ms-linear-gradient(top, #f7f7f7, #cfcfcf);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f7f7f7), to(#cfcfcf));
+    background-image: -webkit-linear-gradient(top, #f7f7f7, #cfcfcf);
+    background-image: -o-linear-gradient(top, #f7f7f7, #cfcfcf);
+    background-image: linear-gradient(top, #f7f7f7, #cfcfcf);
+    background-repeat: repeat-x;
+  }
+
+  #rule-left .batch-menu ul li a:hover{
+    color: black;
+    background-color:#e9e9e9;
+    background-image:-moz-linear-gradient(top, #fff, #c8c8c8);
+    background-image:-ms-linear-gradient(top, #fff, #c8c8c8);
+    background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#fff), to(#c8c8c8));
+    background-image:-webkit-linear-gradient(top, #fff, #c8c8c8);
+    background-image:-o-linear-gradient(top, #fff, #c8c8c8);
+    background-image:linear-gradient(top, #fff, #c8c8c8);
+    background-repeat:repeat-x;
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#c8c8c8', GradientType=0)
+  }
+
+
+  #rule-right .batch-menu ul{
+    margin: 0;
+    position: relative;
+  }
+
+  #rule-right .batch-menu ul li{
+    float: left;
+    border-right: 1px solid #9E9898;
+  }
+
+  #rule-right .batch-menu ul li a{
+    color: rgb(65, 60, 60);
+    font-size: 14px;
+    height: 25px;
+    padding: 10px 8px 0 8px;
+    display: block;
+    text-align: center;
+    border-right: 1px solid #c8c8c8;
+    background-color: #e7e7e7;
+    background-image: -moz-linear-gradient(top, #f7f7f7, #cfcfcf);
+    background-image: -ms-linear-gradient(top, #f7f7f7, #cfcfcf);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f7f7f7), to(#cfcfcf));
+    background-image: -webkit-linear-gradient(top, #f7f7f7, #cfcfcf);
+    background-image: -o-linear-gradient(top, #f7f7f7, #cfcfcf);
+    background-image: linear-gradient(top, #f7f7f7, #cfcfcf);
+    background-repeat: repeat-x;
+  }
+
+  #rule-right .batch-menu ul li a:hover{
+    color: black;
+    background-color:#e9e9e9;
+    background-image:-moz-linear-gradient(top, #fff, #c8c8c8);
+    background-image:-ms-linear-gradient(top, #fff, #c8c8c8);
+    background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#fff), to(#c8c8c8));
+    background-image:-webkit-linear-gradient(top, #fff, #c8c8c8);
+    background-image:-o-linear-gradient(top, #fff, #c8c8c8);
+    background-image:linear-gradient(top, #fff, #c8c8c8);
+    background-repeat:repeat-x;
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#c8c8c8', GradientType=0)
+  }
+
+
   #custom-list{
     margin-bottom: 20px;
     max-height: 90%;
@@ -20,7 +184,7 @@
     padding-left:35px;   
   }
 
-  #rule-list li.active,,#custom-list li.active{
+  #rule-list li.active,#custom-list li.active{
     background-color:#ecf2f5;
     background-image:-moz-linear-gradient(top, #f4fafd, #e0e5e8);
     background-image:-ms-linear-gradient(top, #f4fafd, #e0e5e8);
@@ -111,3 +275,106 @@
   	margin: 15px 10px 0 13px;
   	float: left;
   }
+
+  .modal-group{
+    margin-bottom: 8px;
+  }
+
+  .modal-group .title-label{
+    float: left;
+    width: 90px;
+    text-align: right;
+    padding-top: 5px;
+  }
+
+  .modal-group .content-label{
+    margin-left: 110px;
+  }
+
+  .cover-desc{
+    margin-top: -13px;
+    margin-left: 50px;
+    position: relative;
+    overflow: hidden;
+    margin-right: 4px;
+    display: inline-block;
+    padding: 4px 10px 4px;
+    font-size: 14px;
+    line-height: 18px;
+    color: #fff;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    background-color: #5bb75b;
+    border: 1px solid #cccccc;
+    border-color: #e6e6e6 #e6e6e6 #bfbfbf;
+    border-bottom-color: #b3b3b3;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+  }
+
+  .cover-desc form{
+    margin-bottom: 0;
+  }
+
+  .cover-desc input{
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    border: solid transparent;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    cursor: pointer;
+  }
+
+    #popup{
+    position: absolute;
+    bottom: 40px;
+    left:61px;    
+    min-width: 160px;
+    padding: 5px 0;
+    margin: 2px 0 0;
+    list-style: none;
+    background-color: #ffffff;
+    border: 1px solid #ccc;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+    -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    -webkit-background-clip: padding-box;
+    -moz-background-clip: padding;
+    background-clip: padding-box;
+  }
+
+  #popup:before{
+    position: absolute;
+    bottom: -6px;
+    left: 9px;
+    display: inline-block;
+    border-right: 7px solid transparent;
+    border-top: 7px solid white;
+    border-left: 7px solid transparent;
+    border-bottom-color: rgba(0, 0, 0, 0.2);
+    content: '';
+  }
+
+  #popup li a{
+    padding:2px 20px;
+    font-weight: normal;
+    line-height: 20px;
+    color: #333333;
+    white-space: nowrap;
+  }
+
+  #popup li:hover{
+    background-color: #0088cc
+  }   
+
+  #popup li a:hover{
+    color:white;
+  }  
