--- a/protected/modules/wap/views/wap/personalcenter.html
+++ b/protected/modules/wap/views/wap/personalcenter.html
@@ -26,7 +26,7 @@ a,input,button,li {
 	-ms-touch-action:none!important
 }
 h4,h5,p,label {
-	color:#95067f
+	color:#505050
 }
 h4 {
 	font-size:16px;
@@ -48,7 +48,7 @@ input,textarea {
 	-webkit-user-select:auto
 }
 body {
-	background-color:#f4f2f4;
+	background-color:#f9f9f9;
 	font-size:16px;
 	font-weight:normal;
 	font-family:"Arial",Helvetica,sans-serif;
@@ -69,7 +69,7 @@ footer {
 	height:auto;
 	width:100%;
 	border:0;
-	background:#f3eaf2;
+	background:#f5f5f5;
 	display:block;
 	-webkit-box-shadow:0 0 1px rgba(0,0,0,0.2)
 }
@@ -117,7 +117,7 @@ footer {
 	position:relative
 }
 .tips {
-	background:#ecdaea;
+	background:#e9e9e9;
 	width:100%;
 	-webkit-box-shadow:0 0 1px rgba(0,0,0,0.2);
 	border:0;
@@ -132,10 +132,10 @@ footer {
 }
 .tips>.tips-content {
 	padding:8px 10px;
-	background:#f3eaf2
+	background:#f5f5f5
 }
 .tips>.tips-content>p {
-	color:#95067f;
+	color:#505050;
 	margin:0
 }
 .ul-sort-listview {
@@ -143,7 +143,7 @@ footer {
 	padding:0
 }
 .sort-item-rec {
-	background:#f3eaf2;
+	background:#f5f5f5;
 	-webkit-box-shadow:0 1px 2px rgba(0,0,0,0.2);
 	list-style:none;
 	width:100%;
@@ -175,7 +175,8 @@ footer {
 	width:100%;
 	bottom:0;
 	padding:8px 10px;
-	background:rgba(125,14,108,.8)
+	background:#505050;
+	opacity:0.75;
 }
 .sort-item-rec>.mainarea-in-list>h4,.sort-item-rec>.mainarea-in-list>h5 {
 	width:100%;
@@ -201,7 +202,7 @@ footer {
 	background:rgba(216,14,95,.85)
 }
 .catalog-item {
-	background:#f3eaf2;
+	background:#f5f5f5;
 	-webkit-box-shadow:0 1px 2px rgba(0,0,0,0.2);
 	list-style:none;
 	width:100%;
@@ -217,7 +218,7 @@ footer {
 	text-align:left
 }
 .catalog-item:active {
-	background:#c56bb8;
+	background:#c1c1c1;
 	-webkit-box-shadow:none
 }
 .catalog-item>img {
@@ -273,7 +274,7 @@ footer {
 	width:100%;
 	height:100%;
 	margin:0;
-	background:#f3eaf2;
+	background:#f5f5f5;
 	box-shadow:0 0 2px rgba(0,0,0,0.2);
 	-webkit-box-shadow:0 0 1px rgba(0,0,0,0.2);
 	list-style:none;
@@ -385,7 +386,7 @@ footer {
 #catalog-first-item,#order-first-item {
 	height:100%;
 	min-height:0;
-	background:#ecdaea
+	background:#e9e9e9
 }
 #catalog-first-item>.mainarea-in-list {
 	margin-right:0
@@ -413,11 +414,11 @@ footer {
 	padding:0;
 	width:50px;
 	border:0;
-	background:#f7ecf5;
-	-webkit-box-shadow:0 0 1px rgba(80,0,70,0.4)
+	background:#f1f1f1;
+	-webkit-box-shadow:0 0 1px rgba(0,0,0,0.4)
 }
 .btn-icon:active {
-	background:#c56bb8;
+	background:#c1c1c1;
 	-webkit-box-shadow:none;
 	transition:all 100ms ease-out;
 	-webkit-transition:all 100ms ease-out
@@ -440,11 +441,11 @@ footer {
 	width:auto;
 	position:relative;
 	border:0;
-	background:#f7ecf5;
-	-webkit-box-shadow:0 0 1px rgba(80,0,70,0.4)
+	background:#f1f1f1;
+	-webkit-box-shadow:0 0 1px rgba(0,0,0,0.4)
 }
 .btn-icon-text:active {
-	background:#c56bb8;
+	background:#c1c1c1;
 	-webkit-box-shadow:none;
 	transition:all 100ms ease-out;
 	-webkit-transition:all 100ms ease-out
@@ -461,7 +462,7 @@ footer {
 	vertical-align:text-top;
 	display:inline-block;
 	font-weight:700;
-	color:#95067f
+	color:#505050
 }
 .btn-icon-text>.img-in-btn {
 	margin-right:10px;
@@ -481,7 +482,7 @@ footer {
 #pay-btn {
 	height:100%;
 	width:auto;
-	-webkit-box-shadow:-1px 0 2px rgba(80,0,70,0.4)
+	-webkit-box-shadow:-1px 0 2px rgba(0,0,0,0.4)
 }
 #pay-btn:active,#pay-btn:disabled {
 	-webkit-box-shadow:none
@@ -497,7 +498,7 @@ footer {
 	width:100%
 }
 .info {
-	background:#ecdaea;
+	background:#e9e9e9;
 	margin-bottom:10px;
 	-webkit-box-shadow:0 0 1px rgba(0,0,0,0.2)
 }
@@ -505,11 +506,11 @@ footer {
 	padding:8px 10px
 }
 .info>header>h4 {
-	color:#95067f
+	color:#505050
 }
 .info-content {
 	padding:8px 10px;
-	background:#f3eaf2;
+	background:#f5f5f5;
 	display:block
 }
 .form-content{
@@ -637,7 +638,7 @@ footer {
 	top:0;
 	bottom:0;
 	z-index:200;
-	background-color:#f4f2f4
+	background-color:#f9f9f9
 }
 #error {
 	z-index:1000
