member order management

--- a/protected/modules/wap/views/wap/personalcenter.html
+++ b/protected/modules/wap/views/wap/personalcenter.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=100%, initial-scale=1.0, user-scalable=no">
 	<meta content="telephone=no" name="format-detection">
+	<script type="text/javascript" charset="utf-8" src="personalcenter.js"></script>
 </head>
 <body ontouchstart="return true;">
 <style>
@@ -695,7 +696,7 @@ footer {
 <div id="warning" style="display:none"><h4>您当前处于非验证状态，页面仅供浏览。如需使用预约服务，敬请关注微信号:iFruits_cn。</h4></div>
 <div id="maincontent" class="content-frame" >
 	<ul id="main-list" class="ul-catalog-listview">
-		<li class="sort-item-rec" onclick="showproductcontent('54')"><img src="/weChat/upload/hots/9/20131124233950270.jpg" alt="无真相&gt;_&lt;~"><div class="mainarea-in-list"><h4>聚划算</h4><h5>点击产品名称可见详细图文介绍，聚划算提交订单客户我们将与您电话确认详细事项 </h5></div><p class="p-aside">新品</p></li>
+		<li class="sort-item-rec" onclick="showproductcontent('54')"><img src="/weChat/upload/hots/9/20131124233950270.jpg" alt="无真相&gt;_&lt;~"><div class="mainarea-in-list"><h4>聚划算</h4><h5>点击产品名称可见详细图文介绍，聚划算提交订单客户我们将与您电话确认详细事项 </h5></div></li>
 		<li class="catalog-item">
 		<img src="/weChat/img/category.jpg" alt="无真相&gt;_&lt;~">
 		<div class="list-item-icon" style="background:url(/weChat/img/wap/myicon.png) no-repeat -160px 0;"></div>
