--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,12 @@ a:hover{
     text-decoration:none
 }
 
+.index-container{
+    width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #features .feature{
     display: block;
     float: left;
@@ -215,4 +221,11 @@ a:hover{
 
 .getpassword{
     float: right;
+}
+
+#function_gallery{
+    width: 900px;
+    margin: auto;
+    text-align: center;
+    height: 200px;
 }
